# sk1-2019

./: CMakeLists.txt  Makefile  README.md  common_structs.h  klient.c  netstore-client.c  netstore-server.c  serwer.c  snippet  snippet.c
tmp/: nazwa
